Querying from the frondend and getting results send back to to frontend, is now working. This build compiles. It still has issues. Like needing to connect for every query performed. And when editing the query, the cursor snaps back to the last line, which is very anoying. And no proper error handling.

--- a/frontend/code-editor.css
+++ b/frontend/code-editor.css
@@ -297,6 +297,10 @@ html, body {
   color: #D4D4D4;
 }
 
+.hide {
+  display: none;
+}
+
 /* PL/SQL Syntax Highlighting */
 .keyword {
   color: #1986d3;
